--- a/app/src/main/res/layout/item_input_number.xml
+++ b/app/src/main/res/layout/item_input_number.xml
@@ -5,21 +5,19 @@
     android:orientation="horizontal">
 
     <EditText
-        android:selectAllOnFocus="true"
-        android:minHeight="50dp"
         android:id="@+id/et_input_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:inputType="numberSigned|numberDecimal"
+        android:minHeight="50dp"
         android:minWidth="30dp"
+        android:selectAllOnFocus="true"
         android:text="0" />
 
     <TextView
-        android:minHeight="50dp"
         android:id="@+id/tv_variable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:minWidth="30dp" />
+        android:minHeight="50dp" />
 </LinearLayout>
