--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -50,6 +50,8 @@
     </LinearLayout>
 
     <Button
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
         android:id="@+id/btnEnterNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
